--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -34,6 +34,7 @@
 @import 'dropdown';
 @import 'sections';
 @import 'cursor';
+@import 'pointer-events';
 
 @import '../ts/components/index';
 @import '../ts/binders/index';
