--- a/src/ts/components/shopify-linklist/shopify-linklist.component.html
+++ b/src/ts/components/shopify-linklist/shopify-linklist.component.html
@@ -1,6 +1,6 @@
 
 <nav class="nav" rv-add-class="linklist.handle" rv-class-nav-pills="pills" rv-class-flex-column="vertical" rv-class-flex-row="vertical | not">
   <div class="nav-item" rv-each-link="linklist.links">
-    <a class="nav-link" rv-class-active="link.active" rv-route="link.href" rv-href="link.href">{link.text}</a>
+    <a class="nav-link" rv-class-active="link.active" rv-route="link.url" rv-href="link.url">{link.title}</a>
   </div>
 </nav>
