--- a/theme/snippets/jumplink-utils-json-link.liquid
+++ b/theme/snippets/jumplink-utils-json-link.liquid
@@ -1,10 +1,32 @@
 {
-    'active': {{link.active}},
-    'object': '{{link.object}}',
-    'handle': '{{link.title | handle}}',
-    'title': '{{link.title | replace: "'",  "\'"}}',
-    'text': '{{link.title | replace: "'",  "\'"}}', {% comment %} for bootstrap-treeview  {% endcomment %}
-    'type': '{{link.type}}',
-    'url': '{{link.url}}',
-    'href': '{{link.url}}', {% comment %} for bootstrap-treeview  {% endcomment %}
+    "active": {{link.active | json}},
+    "child_active": {{link.child_active | json}},
+    "levels": {{link.levels | json}},
+    {% if link.links %}
+        "links": {% include "jumplink-utils-json-links", links: link.links %},
+    {% endif %}
+    {% comment %} BlogDrop {% endcomment %}
+    {% if link.object.articles %}
+        "object": {% include "jumplink-utils-json-blog", blog: link.object %},
+    {% comment %} PageDrop {% endcomment %}
+    {% elsif link.object.author %}
+        "object": {% include "jumplink-utils-json-page", page: link.object %},
+    {% comment %} CollectionDrop {% endcomment %}
+    {% elsif link.object.all_products_count >= 0 %}
+        "object": {
+            "type": "collection",
+            "handle": {{link.object.handle | json}},
+        },
+    {% comment %} ProductDrop {% endcomment %}
+    {% elsif link.object.price >= 0 %}
+        "object": {
+            "type": "product",
+            "handle": {{link.object.handle | json}},
+        },
+    {% endif %}
+
+    "handle": {{link.title | handle | json}},
+    "title": {{link.title | json}},
+    "type": {{link.type | json}},
+    "url": {{link.url | json}}
 }
