--- a/theme/snippets/jumplink-utils-json-linklists.liquid
+++ b/theme/snippets/jumplink-utils-json-linklists.liquid
@@ -1,5 +1,5 @@
 {
     {% for linklist in linklists %}
-        {% include 'jumplink-utils-json-linklist' %},
+        {% include 'jumplink-utils-json-linklist', linklist: linklist %},
     {% endfor %}
 }
