--- a/theme/snippets/jumplink-favicons.liquid
+++ b/theme/snippets/jumplink-favicons.liquid
@@ -4,8 +4,8 @@
 <link rel="apple-touch-icon" sizes="180x180" href="{{ 'favicon-apple-touch-icon.png' | asset_url }}">
 <link rel="icon" type="image/png" href="{{ 'favicon-32x32.png' | asset_url }}" sizes="32x32">
 <link rel="icon" type="image/png" href="{{ 'favicon-16x16.png' | asset_url }}" sizes="16x16">
-<link rel="manifest" href="{{ 'manifest.json' | asset_url }}">
+<link rel="manifest" href="{{ 'favicon-manifest.json' | asset_url }}">
 <link rel="mask-icon" href="{{ 'favicon-safari-pinned-tab.svg' | asset_url }}" color="#000000">
 <link rel="shortcut icon" href="{{ 'favicon.ico' | asset_url }}">
-<meta name="msapplication-config" content="{{ 'browserconfig.xml' | asset_url }}">
+<meta name="msapplication-config" content="{{ 'favicon-browserconfig.xml' | asset_url }}">
 <meta name="theme-color" content="#ffffff">
