--- a/theme/snippets/jumplink-utils-json-links.liquid
+++ b/theme/snippets/jumplink-utils-json-links.liquid
@@ -1,8 +1,5 @@
 [
-    {% for link in linklist.links %}
-        {% if link.handle == 'blog' and settings.blog_enable == false %}
-        {% else %}
-            {% include 'jumplink-utils-json-link' %},
-        {% endif %}
+    {% for link in links %}
+        {% include 'jumplink-utils-json-link', link: link %},
     {% endfor %}
 ]
