--- a/src/ts/components/shopify-linklist/shopify-linklist.component.html
+++ b/src/ts/components/shopify-linklist/shopify-linklist.component.html
@@ -1,6 +1,8 @@
-
-<nav class="nav" rv-add-class="linklist.handle" rv-class-nav-pills="pills" rv-class-flex-column="vertical" rv-class-flex-row="vertical | not">
+<nav class="nav" rv-class="linklist.handle" rv-class-nav-pills="pills" rv-class-flex-column="vertical" rv-class-flex-row="vertical | not">
   <div class="nav-item" rv-each-link="linklist.links">
     <a class="nav-link" rv-class-active="link.active" rv-route="link.url" rv-href="link.url">{link.title}</a>
+    <div class="nav-item" rv-each-sublink="link.links">
+      <a class="nav-link" rv-class-active="sublink.active" rv-route="sublink.url" rv-href="sublink.url">{sublink.title}</a>
+    </div>
   </div>
 </nav>
