--- a/theme/snippets/jumplink-utils-barba-container-attributes.liquid
+++ b/theme/snippets/jumplink-utils-barba-container-attributes.liquid
@@ -2,7 +2,7 @@
   {% assign template = 'no-barba' %}
 {% endif %}
 
-{% assign namespace = template | replace: '.', ' ' | truncatewords: 1, '' | handle %}
+{% assign namespace = template | replace: '.', ' ' | truncatewords: 1, '' | handleize %}
 data-title="{% include 'jumplink-utils-get-title' %}"
 data-namespace="{{ namespace }}"
 data-template="{{ template }}"
