--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -487,7 +487,7 @@ $custom-checkbox-indicator-indeterminate-box-shadow:  none !default;
 
 $custom-radio-indicator-border-radius:          50% !default;
 $custom-radio-indicator-icon-checked:           str-replace(url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3E%3Ccircle r='4' fill='#{$custom-control-indicator-checked-color}'/%3E%3C/svg%3E"), "#", "%23");
-$custom-radio-indicator-icon-unchecked:         str-replace(url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3E%3Ccircle r='3.5' fill='#{$white}' stroke-width='1' stroke='#{$custom-control-indicator-checked-color}'/%3E%3C/svg%3E"), "#", "%23");
+$custom-radio-indicator-icon-unchecked:         str-replace(url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3E%3Ccircle r='3.5' fill='transparent' stroke-width='1' stroke='#{$custom-control-indicator-checked-color}'/%3E%3C/svg%3E"), "#", "%23");
 
 $custom-select-padding-y:           .375rem !default;
 $custom-select-padding-x:           .75rem !default;
