--- a/src/ts/components/shopify-filter/shopify-filter.component.html
+++ b/src/ts/components/shopify-filter/shopify-filter.component.html
@@ -1,7 +1,6 @@
-
 <nav class="nav flex-column" rv-add-class="linklist.handle">
   <div class="nav-item" rv-each-link="linklist.links">
-    <a class="nav-link" rv-class-active="link.active" rv-route="link.url" rv-href="link.url">{link.title}</a>
+    <a class="nav-link" rv-add-class="'level-' | append link.level" rv-class-active="link.active" rv-route="link.url" rv-href="link.url">{link.title}</a>
     <div class="nav-item" rv-each-sublink="link.links">
       <div class="custom-control custom-radio">
         <input type="radio" rv-id="sublink.handle" rv-name="link.handle" class="custom-control-input">
@@ -10,4 +9,3 @@
     </div>
   </div>
 </nav>
-
