--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -285,7 +285,7 @@ $text-muted:                  $gray-600 !default;
 $blockquote-small-color:      $gray-600 !default;
 $blockquote-font-size:        ($font-size-base * 1.25) !default;
 
-$hr-border-color:             rgba($black, .1) !default;
+$hr-border-color:             rgba($black, 1);
 $hr-border-width:             $border-width !default;
 
 $mark-padding:                .2em !default;
