--- a/theme/snippets/jumplink-article-list-item.liquid
+++ b/theme/snippets/jumplink-article-list-item.liquid
@@ -1,48 +1,15 @@
-<div class="col-xs-12 py-1">
-  <article data-handle="{{article.handle}}" class="row">
-    <div class="col-xs-12 col-md-4 col-lg-3 col-lg-offset-1">
-    
-      <a href="{{article.url}}" class="background-box ratio-1-1" style="background-image: url({{article.image.src | img_url: '1024x1024'}});" title="{{article.title}}"></a>
-      
-      {% comment %} medium divice and heigher {% endcomment %}
+{% assign type = article.metafields["global"]["type"] %}
+{% assign color = article.metafields["global"]["color"] %}
 
-    </div>
-    <div class="col-xs-12 col-md-8 col-lg-7">
-
-      <div class="hidden-xs pt-05">
-        <div class="media">
-          <gravatar data-hash="{{article.user.email | remove: ' ' | strip_newlines | downcase | md5}}" class="media-left media-middle" data-placeholders='[ {{ 'avatar-01.jpg' | asset_url | json }}, {{ 'avatar-02.jpg' | asset_url | json }}, {{ 'avatar-03.jpg' | asset_url | json }}, {{ 'avatar-04.jpg' | asset_url | json }}, {{ 'avatar-05.jpg' | asset_url | json }} ]'></gravatar>
-          <div class="media-body media-middle">
-            {{article.user.first_name | default: 'Unbekannt'}} {{article.user.last_name}}
-          </div>
-        </div>
-        <div class="row">
-          <h1 class="col-xs-8 text-left text-serif text-normal text-size-4">{{article.title}}</h1>
-        </div>
-        <p class="text-justify">{{ article.content | strip_html | truncatewords: 40 }} <a href="{{article.url}}"><strong>{{'blog.general.readmore'|t}}</strong></a></p>
-      </div>
-      
-      {% comment %} small divices {% endcomment %}
-      <div class="row visible-xs-block">
-        <div class="col-xs-12 p-y-05">
-          <h1 class="text-center text-serif text-normal pt-05">{{article.title}}</h1>
-          <gravatar data-hash="{{article.user.email | remove: ' ' | strip_newlines | downcase | md5}}" class="center-block" data-placeholders='[ {{ 'avatar-01.jpg' | asset_url | json }}, {{ 'avatar-02.jpg' | asset_url | json }}, {{ 'avatar-03.jpg' | asset_url | json }}, {{ 'avatar-04.jpg' | asset_url | json }}, {{ 'avatar-05.jpg' | asset_url | json }} ]'></gravatar>
-          <div class="text-center">
-            von {{article.user.first_name | default: 'Unbekannt'}} {{article.user.last_name}}
-          </div>
-
-          <div class="rte p-y-05">
-            {% if article.excerpt.size > 0 %}
-              {{ article.excerpt }}
-            {% else %}
-              <p class="text-justify">{{ article.content | strip_html | truncatewords: 40 }} <a href="{{article.url}}"><strong>{{'blog.general.readmore'|t}}</strong></a></p>
-            {% endif %}
-          </div>
-
-        </div>
-
-      </div>
-
-    </div>
-  </article>
-</div>
+{% case type %}
+  {% when 'magazine' %}
+    {% include 'jumplink-article-list-item-view-magazine', color: color %}
+  {% when '2-grid-2-images' %}
+    {% include 'jumplink-article-list-item-view-2-grid-2-images', color: color %}
+  {% when '2-grid-story-product' %}
+    {% include 'jumplink-article-list-item-view-2-grid-story-product', color: color, productDirection: 'right' %}
+  {% when '2-grid-product-story' %}
+    {% include 'jumplink-article-list-item-view-2-grid-story-product', color: color, productDirection: 'left' %}
+  {% else %}
+    {% include 'jumplink-article-list-item-view-magazine', color: color %}
+{% endcase %}
