--- a/theme/snippets/jumplink-navigation.liquid
+++ b/theme/snippets/jumplink-navigation.liquid
@@ -38,16 +38,41 @@
 
       <div class="row pt-4">
 
-        <shopify-filter class="col-auto pointer-events-all" rv-namespace="dataset.namespace" rv-template-directory="dataset.templateDirectory">
+        <shopify-filter class="col-auto pointer-events-all" rv-namespace="dataset.namespace" rv-template="dataset.template | json">
           <nav class="nav flex-column" rv-add-class="linklist.handle">
-            <div class="nav-item" rv-each-link="linklist.links" rv-show="show | call link.handle namespace templateDirectory">
+            <div class="nav-item" rv-each-link="linklist.links" rv-show="show | call link.handle namespace template">
+              
               <a class="nav-link" rv-add-class="'level-' | append link.level" rv-class-active="link.active" rv-route="link.url" rv-href="link.url">{link.title}</a>
-              <div class="nav-item small" rv-each-sublink="link.links">
-                <div class="custom-control custom-radio">
-                  <input type="radio" rv-id="sublink.handle" rv-name="link.handle" class="custom-control-input">
-                  <label class="custom-control-label" rv-for="sublink.handle">{sublink.title}</label>
+              <div class="small" rv-if="type | call link.handle | eq 'routes'">
+                <strong>Type</strong>
+                <div class="nav-item" rv-each-sublink="link.links">
+                  <div class="custom-control custom-radio">
+                    <input type="radio" rv-id="sublink.handle" rv-name="link.handle" rv-route="sublink.url" rv-checked-on-route="sublink.url" class="custom-control-input">
+                    <label class="custom-control-label" rv-route="sublink.url" rv-for="sublink.handle">{sublink.title}</label>
+                  </div>
                 </div>
               </div>
+
+              <div class="small" rv-if="type | call link.handle | eq 'scrollspy'">
+                <strong>Type</strong>
+                <div class="nav-item" rv-each-sublink="link.links">
+                  <div class="custom-control custom-radio">
+                    <input type="radio" rv-id="sublink.handle" rv-name="link.handle" class="custom-control-input">
+                    <label class="custom-control-label" rv-for="sublink.handle">{sublink.title}</label>
+                  </div>
+                </div>
+              </div>
+
+              <div class="small" rv-if="type | call link.handle | eq 'filter'">
+                <strong>Type</strong>
+                <div class="nav-item" rv-each-sublink="link.links">
+                  <div class="custom-control custom-radio">
+                    <input type="radio" rv-id="sublink.handle" rv-name="link.handle" class="custom-control-input">
+                    <label class="custom-control-label" rv-for="sublink.handle">{sublink.title}</label>
+                  </div>
+                </div>
+              </div>
+
             </div>
           </nav>
         </shopify-filter>
