--- a/theme/snippets/jumplink-utils-barba-container-attributes.liquid
+++ b/theme/snippets/jumplink-utils-barba-container-attributes.liquid
@@ -5,26 +5,18 @@
 {% assign namespace = template | replace: '.', ' ' | truncatewords: 1, '' | handleize %}
 data-title="{% include 'jumplink-utils-get-title' %}"
 data-namespace="{{ namespace }}"
-data-template="{{ template }}"
-data-template-directory="{{ template.directory }}"
-data-template-name="{{ template.name }}"
-data-template-suffix="{{ template.suffix }}"
+data-template='{% include 'jumplink-utils-json-template' %}'
 
 data-seo-page-title={{ page_title | json }}
 data-seo-page_description={{ page_description | json }}
 
 {% if page %}
-  data-page-author={{ page.author | json }}
-  data-page-content={{ page.content | json }}
-  data-page-handle={{ page.handle | json }}
-  data-page-id={{ page.id | json }}
-  data-page-published-at={{ page.published_at | json }}
-  data-page-template-suffix={{ page.template_suffix | json }}
-  data-page-title={{ page.title | json }}
-  data-page-url={{ page.url | json }}
+  data-handle={{ page.handle | json }}
+  data-page='{% include 'jumplink-utils-json-page' %}'
 {% endif %}
 
 {% if product %}
+  data-handle={{ product.handle | json }}
   data-product-url="{{collection.url}}{{product.url}}"
   data-product-title='{{product.title | replace: "'", "&#39;"}}'
   data-product='{{product | json | replace: "'", "&#39;"}}'
@@ -48,8 +40,9 @@ data-seo-page_description={{ page_description | json }}
 {% endif %}
 
 {% if collection %}
-  data-collection-handle="{{collection.handle}}"
-  data-collection-title="{{collection.title}}"
+  data-handle={{ collection.handle | json }}
+  data-collection-handle={{collection.handle | json }}
+  data-collection-title={{collection.title | json }}
 
   {% comment %}
     Paginate informations needed for the show all products function
@@ -95,10 +88,6 @@ data-seo-page_description={{ page_description | json }}
   data-paginate-hash="{{paginate_hash}}"
 {% endif %}
 
-{% if page %}
-    data-page-handle="{{page.handle}}"
-{% endif %}
-
 {% if search %}
   data-search-results-count="{{search.results_count}}"
   {% if search.results_count == 1 %}
@@ -111,9 +100,11 @@ data-seo-page_description={{ page_description | json }}
 {% endif %}
 
 {% if blog %}
+  data-handle={{ blog.handle | json }}
   data-blog='{% include 'jumplink-utils-json-blog' %}'
 {% endif %}
 
 {% if article %}
+  data-handle={{article.handle | json}}
   data-article='{% include 'jumplink-utils-json-article' %}'
 {% endif %}
