--- a/theme/snippets/jumplink-utils-json-blog.liquid
+++ b/theme/snippets/jumplink-utils-json-blog.liquid
@@ -1,21 +1,24 @@
-{
-  {% if blog %}
-    "all_tags": {{ blog.all_tags | json}},
-    "articles": [
-      {% for article in blog.articles %}
-        {% include 'jumplink-utils-json-article' %}
-        {% comment %} {{article.handle | json}} {% endcomment %}
-      {% endfor %}
-    ],
-    "articles_count": {{blog.articles_count | json}},
-    "comments_enabled": {{blog.comments_enabled? | json}},
-    "handle": {{blog.handle | json}},
-    "id": {{blog.id | json}},
-    "moderated": {{blog.moderated? | json}},
-    "next_article": {{blog.next_article  | json}},
-    "previous_article": {{blog.previous_article | json}},
-    "tags": {{blog.tags | json}},
-    "title": {{blog.title  | json}},
-    "url": {{blog.url | json}}
-  {% endif %}
-}
+{% capture blogJsonString %}
+  {
+    {% if blog %}
+      "all_tags": {{ blog.all_tags | json}},
+      "articles": [
+        {% for article in blog.articles %}
+          {% include 'jumplink-utils-json-article' %}
+          {% comment %} {{article.handle | json}} {% endcomment %}
+        {% endfor %}
+      ],
+      "articles_count": {{blog.articles_count | json}},
+      "comments_enabled": {{blog.comments_enabled? | json}},
+      "handle": {{blog.handle | json}},
+      "id": {{blog.id | json}},
+      "moderated": {{blog.moderated? | json}},
+      "next_article": {{blog.next_article  | json}},
+      "previous_article": {{blog.previous_article | json}},
+      "tags": {{blog.tags | json}},
+      "title": {{blog.title  | json}},
+      "url": {{blog.url | json}}
+    {% endif %}
+  }
+{% endcapture %}
+{{ blogJsonString | strip_newlines | strip }}
