--- a/theme/templates/article.liquid
+++ b/theme/templates/article.liquid
@@ -17,7 +17,7 @@ Note that comment.created_at will only be defined if the comment did not have an
 {% endcomment %}
 
 
-<div class="container pt-5">
+<div class="container-fluid pt-5">
 
   <h1 class="hidden-xs-up"><a href="{{ blog.url }}">{{ blog.title }}</a></h1>
 
