--- a/theme/snippets/jumplink-utils-json-article.liquid
+++ b/theme/snippets/jumplink-utils-json-article.liquid
@@ -26,4 +26,4 @@
     {% endif %}
   }
 {% endcapture %}
-{{ articleJsonString | strip_newlines | strip }}
+{{ articleJsonString | strip_newlines | strip | replace: "'", "&#39;" }}
