--- a/theme/templates/collection.liquid
+++ b/theme/templates/collection.liquid
@@ -1,104 +1,10 @@
-<div class="container pt-5">
+<div class="container-fluid">
   {% paginate collection.products by settings.products_per_page %}
-
-    {% comment %}
-      How many unlocked products are available?
-    {% endcomment %}
-    {% include 'app-jumplink-ec-logic-collection-unlocked-count' %}
-
     <div class="row">
-      <div data-barba="freeze" data-collection-filter="true" class="col-xs-12 col-md-2 col-lg-2">
-        {% include 'jumplink-filter'%}
-      </div>
-      <div data-collection-products="true" class="col-xs-12 col-md-10 col-lg-10 offset-xs-0 offset-md-2 offset-lg-2 ">
-        {% if collection.title != 'All' and paginate.current_page <= 1 %}
-          <div class="row">
-            {% if collection.image %}
-              <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
-                {% if collection.description.size > 0 %}
-                  <div class="pb-1">
-                    <h1 class="collection-title mt-0 mb-4 text-center">
-                      {{ collection.title | strip_html }}
-                    </h1>
-                    <div class="rte">
-                      {{ collection.description }}
-                    </div>
-                    {% comment %}
-                      Product not allowed!
-                    {% endcomment %}
-                    {% if unlocked_count <= 0 %}
-                        <div class="col-xs-12 my-5">
-                          {% include 'jumplink-collection-locked' %}
-                        </div>
-                    {% endif %}
-                  </div>
-                {% endif %}
-              </div>
-              <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 mb-5">
-                <div class="background-box {{ settings.collections_aspect_ratio }}" style="background-image:url( {{ collection.image | img_url: 'grande' }} )" alt="{{ collection.title }}"></div>
-              </div>
-            {% else %}
-              {% if collection.description.size > 0 %}
-                <div class="col-xs-12 pb-1">
-                  <h1 class="collection-title mt-0">
-                    {{ collection.title }}
-                  </h1>
-                  <div class="rte">
-                    {{ collection.description }}
-                  </div>
-                  {% comment %}
-                    Product not allowed!
-                  {% endcomment %}
-                  {% if unlocked_count <= 0 %}
-                      <div class="col-xs-12 my-5">
-                        {% include 'jumplink-collection-locked' %}
-                      </div>
-                  {% endif %}
-                </div>
-              {% endif %}
-
-            {% endif %}
-          </div>
-        {% endif %}
-        
-        {% if customer %}
-          <div class="-mx-2">
-            <div data-product="row" class="row">
-
-              {% if unlocked_count >= 1 %}
-                {% for product in collection.products %}
-
-                  {% comment %}
-                    Is the current product unlocked?
-                  {% endcomment %}
-                  {% include 'app-jumplink-ec-logic-product-unlocked' %}
-
-                  {% if unlocked %}
-                      <div data-product="column" class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
-                          {% include 'jumplink-product-grid-item' with settings.products_per_page %}
-                      </div>
-                  {% endif %}
-
-                {% endfor %}
-
-                <div data-pagination-wrapper="true" class="col-xs-12 pagination-wrapper">
-                  {% include 'jumplink-pagination', show_all_active: true %}
-                </div>
-              {% endif %}
-
-            </div>
-          </div>
-        {% comment %}
-          Not logged in
-        {% endcomment %}
-        {% else %}
-
-        {% endif %}
-      </div>
-
+        {% for product in collection.products %}
+          {% include 'jumplink-product-grid-item' with settings.products_per_page %}
+        {% endfor %}
+        {% include 'jumplink-pagination', show_all_active: true %}
     </div>
-
-
   {% endpaginate %}
-  
 </div>
