--- a/src/ts/components/_index.scss
+++ b/src/ts/components/_index.scss
@@ -1,4 +1,4 @@
 @import './shopify-linklist/shopify-linklist.component.scss';
 @import './shopify-filter/shopify-filter.component.scss';
-@import './iconset/iconset.component.scss';
+@import './icon/icon.component.scss';
 @import './newsletter/newsletter.component.scss';
