--- a/theme/snippets/jumplink-footer.liquid
+++ b/theme/snippets/jumplink-footer.liquid
@@ -1,4 +1,4 @@
-<footer class="container-fluid footer pointer-events-none" style="background-color:#F9DFD2;">
+<footer class="container-fluid footer pointer-events-none pt-5">
   {% comment %}
     MAINBAR
   {% endcomment %}
@@ -15,7 +15,7 @@
       MAINBAR RIGHT
     {% endcomment %}
     <div class="ml-auto col-auto d-flex align-items-center">
-      <shopify-linklist class="col-auto pointer-events-all" rv-linklist="system.linklists.footer | json" vertical="false"></shopify-linklist>
+      <shopify-linklist class="col-auto pointer-events-all small" rv-linklist="system.linklists.footer | json" vertical="false"></shopify-linklist>
     </div>
   </div>
 
